--- a/src/components/SuggestionPanel/SuggestionPanel.css
+++ b/src/components/SuggestionPanel/SuggestionPanel.css
@@ -6,6 +6,8 @@
   z-index: 1;
   font-family: Roboto;
   overflow-wrap: break-word;
+  overflow: auto;
+  max-height: 500px;
 }
 .market-name {
   border-bottom: 1px solid var(--core-secondary-3);
