feature: add data fething for key stats and minor fixes

--- a/src/components/SuggestionPanel/SuggestionPanel.css
+++ b/src/components/SuggestionPanel/SuggestionPanel.css
@@ -8,6 +8,8 @@
   overflow-wrap: break-word;
   overflow: auto;
   max-height: 500px;
+  position: absolute;
+  width: 100%;
 }
 .market-name {
   border-bottom: 1px solid var(--core-secondary-3);
